feat: add proactive VIC check-ins
